<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>

    <string name="label_bill">Bill Amount</string>
    <string name="label_people">People</string>
    <string name="label_tip_percent">Tip (%)</string>

    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>

    <string name="label_each_bill">Each Bill</string>
    <string name="label_each_tip">Each Tip</string>
    <string name="label_each_total">Each Total</string>

    <string name="errormsg_invalid_input">Invalid input</string>
    <string name="errormsg_people">Must have at least 1 person to pay</string>
    <string name="errormsg_tip_percent">Tip cannot be less than 0</string>

</resources>
