<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.diaero.tipcalculator.MainActivity$PlaceholderFragment">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow style="@style/tableRow">

            <TextView
                android:text="@string/label_bill"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_bill"
                style="@style/field_editText" />
        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:text="@string/label_people"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_people"
                style="@style/field_editText" />
        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:text="@string/label_tip"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_tip"
                style="@style/field_editText" />
        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:text="@string/label_total"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_total"
                style="@style/field_editText" />
        </TableRow>

        <TableRow style="@style/tableRow"
            android:paddingTop="15dp">

            <TextView
                android:text="@string/label_each_tip"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_each_tip"
                style="@style/field_editText" />
        </TableRow>

        <TableRow style="@style/tableRow">

            <TextView
                android:text="@string/label_each_total"
                style="@style/field_label" />

            <Space style="@style/field_spacing" />

            <EditText
                android:id="@+id/editText_each_total"
                style="@style/field_editText" />
        </TableRow>
        

    </TableLayout>
</RelativeLayout>
